added key manager